# tauler

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  justfile  plan.md  renovate.json  spec.md
.github/workflows/: ci.yml
costae-docgen/: Cargo.toml
costae-docgen/snapshots/: badge_400x53.snap  card_400x108.snap  datatable_400x116.snap  progress_400x56.snap  table_400x90.snap
costae-docgen/src/: main.rs
costae-i3/: Cargo.toml
costae-i3/src/: events.rs  ipc.rs  main.rs  workspace.rs
costae-lifecycle-derive/: Cargo.toml
costae-lifecycle-derive/src/: lib.rs
costae-luax/: Cargo.toml
costae-notify/: Cargo.toml
costae-notify/src/: main.rs  server.rs
costae-screenshot/: Cargo.toml
costae-screenshot/src/: main.rs
costae-ui-macro/: Cargo.toml
costae-ui-macro/src/: lib.rs
docs/: components.md  next.config.mjs  package.json  pnpm-lock.yaml
docs/ideas/: logging-vision.md  pipeline-vision.md  reconciler-as-memory-model.md  structured-unix-philosophy.md  takumi-modules-registry.md  takumi-surface-reconciliation.md  tauler-compositor-vision.md
layout-poc/: Cargo.toml  PLAN.md
layout-poc/src/: main.rs
layout-poc/test-assets/: great-wave.png.txt  water-lilies.png.txt
layout-poc/test-snapshots/: golden_clock_tick__full_f3.snap  golden_clock_tick__incr_f1.snap  golden_clock_tick__incr_f2.snap  golden_cold_frame_exact_match__full_f0.snap  golden_cold_frame_exact_match__incr_f0.snap  golden_notification_rotation__full_f0.snap  golden_notification_rotation__full_f2.snap  golden_notification_rotation__full_f4.snap  golden_notification_rotation__incr_f0.snap  golden_notification_rotation__incr_f2.snap  golden_notification_rotation__incr_f4.snap  golden_scroll_frame__full_f1.snap  golden_scroll_frame__full_f10.snap  golden_scroll_frame__full_f5.snap  golden_scroll_frame__incr_f1.snap  golden_scroll_frame__incr_f10.snap  golden_scroll_frame__incr_f5.snap  golden_workspace_focus_change__full_f4.snap  golden_workspace_focus_change__incr_f4.snap  golden_workspace_focus_change__incr_f8.snap  reg_image_resize_dirty_region__full_f3.snap  reg_image_resize_dirty_region__full_f8.snap  reg_image_resize_dirty_region__incr_f3.snap  reg_image_resize_dirty_region__incr_f8.snap  reg_ml_auto_positioning__full_f5.snap  reg_ml_auto_positioning__incr_f5.snap  reg_moved_node_clears_old_position__full_f1.snap  reg_moved_node_clears_old_position__incr_f1.snap  reg_node_shrink_stale_pixels__full_f1.snap  reg_overflow_clip_rounding__full_f1.snap  reg_overflow_clip_rounding__incr_f1.snap  reg_structure_change_no_ghost__full_f0.snap  reg_structure_change_no_ghost__incr_f2.snap  test_ml_auto_all_phases__full_f10.snap  test_ml_auto_all_phases__full_f15.snap  test_ml_auto_all_phases__full_f5.snap  test_ml_auto_all_phases__incr_f10.snap  test_ml_auto_all_phases__incr_f15.snap  test_ml_auto_all_phases__incr_f5.snap  test_rounded_clip_all_widths__full_f4.snap  (+10 more)
optative/: Cargo.toml
optative/src/: lib.rs  reconcile.rs
src/: app.rs  config.rs  display_manager.rs  jsx.rs  lib.rs  main.rs
src/data/: mod.rs
src/layout/: mod.rs
src/managed_set/: mod.rs  reconcile.rs
src/modules/: mod.rs
src/panel/: mod.rs
src/presentation/: mod.rs
src/presenter/: mod.rs  wayland.rs  x11.rs
src/render/: mod.rs
src/theme/: mod.rs  resolver.rs
src/ui/: cva.rs  mod.rs  registry.rs
src/x11/: click.rs  mod.rs  outputs.rs  panel.rs
takumi-incr/: Cargo.toml  PLAN.md
takumi-incr/src/: lib.rs  main.rs
takumi-incr/test-assets/: pearl-earring.png.txt  starry-night.png.txt
takumi-incr/test-snapshots/: golden_clock_tick__full_f1.snap  golden_clock_tick__full_f3.snap  golden_clock_tick__incr_f2.snap  golden_clock_tick__incr_f3.snap  golden_cold_frame_exact_match__incr_f0.snap  golden_notification_rotation__full_f0.snap  golden_notification_rotation__full_f2.snap  golden_notification_rotation__full_f4.snap  golden_notification_rotation__incr_f0.snap  golden_notification_rotation__incr_f0.snap.new  golden_notification_rotation__incr_f2.snap  golden_notification_rotation__incr_f4.snap  golden_scroll_frame__full_f1.snap  golden_scroll_frame__full_f10.snap  golden_scroll_frame__full_f5.snap  golden_scroll_frame__incr_f1.snap  golden_scroll_frame__incr_f1.snap.new  golden_scroll_frame__incr_f10.snap  golden_scroll_frame__incr_f5.snap  golden_workspace_focus_change__full_f4.snap  golden_workspace_focus_change__full_f8.snap  golden_workspace_focus_change__incr_f4.snap  reg_image_resize_dirty_region__full_f3.snap  reg_image_resize_dirty_region__full_f8.snap  reg_image_resize_dirty_region__incr_f3.snap  reg_image_resize_dirty_region__incr_f3.snap.new  reg_image_resize_dirty_region__incr_f8.snap  reg_ml_auto_positioning__full_f5.snap  reg_ml_auto_positioning__incr_f5.snap  reg_moved_node_clears_old_position__full_f1.snap  reg_node_shrink_stale_pixels__full_f1.snap  reg_node_shrink_stale_pixels__incr_f1.snap  reg_overflow_clip_rounding__full_f1.snap  reg_overflow_clip_rounding__incr_f1.snap  reg_structure_change_no_ghost__full_f1.snap  test_ml_auto_all_phases__full_f10.snap  test_ml_auto_all_phases__full_f15.snap  test_ml_auto_all_phases__full_f5.snap  test_ml_auto_all_phases__incr_f10.snap  test_ml_auto_all_phases__incr_f15.snap  (+13 more)
tauler-docgen/: Cargo.toml
tauler-docgen/snapshots/: badge.snap  card.snap  datatable.snap  progress.snap  table.snap
tauler-i3/: Cargo.toml
tauler-lifecycle-derive/: Cargo.toml
tauler-luax/: Cargo.toml
tauler-notify/: Cargo.toml
tauler-notify/src/: main.rs  model.rs  server.rs
tauler-screenshot/: Cargo.toml
tauler-ui-macro/: Cargo.toml
tests/: data_loop_wake_items_test.rs  fullscreen_test.rs  hit_test.rs  image_test.rs  layout_width_test.rs  module_test.rs  render_dpr_test.rs  rendering_test.rs  root_bg_test.rs  spawn_string_stream_test.rs  spawned_module_drop_test.rs  strut_test.rs  ui_badge_test.rs  ui_card_primitives_test.rs  ui_card_test.rs  ui_cva_test.rs  ui_icon_test.rs  ui_multi_module_test.rs  ui_progress_test.rs  ui_table_primitives_test.rs  ui_table_test.rs  windowing_display_server_test.rs  windowing_types_test.rs  windowing_wayland_test.rs
(+30 files in other folders)
