[workspace]
members = [".", "costae-i3", "costae-luax", "costae-notify", "costae-lifecycle-derive", "costae-ui-macro", "layout-poc", "costae-docgen", "costae-screenshot"]
resolver = "2"

[package]
name = "costae"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rquickjs = { version = "0.11", features = ["loader"] }
rquickjs-serde = "0.5"
oxc_transformer = "0.124"
takumi = "1.1.2"
x11rb = { version = "0.13.2", features = ["allow-unsafe-code", "randr"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
libc = "0.2.186"
thiserror = "2.0.18"
json-canon = "0.1.3"
tiny-skia = "0.12"
oxc_parser = "0.124"
oxc_codegen = "0.124"
oxc_allocator = "0.124"
oxc_semantic = "0.124"
oxc_span = "0.124"
oxc_ast = "0.128.0"
oxc_resolver = "11.19.1"
anyhow = "1.0.102"
serde_yaml = "0.9.34"
costae-lifecycle-derive = { path = "costae-lifecycle-derive" }
costae-ui-macro = { path = "costae-ui-macro" }
notify = "6.1.1"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.14"
cached = { version = "0.59.0", features = ["proc_macro"] }
parley = "0.9"

[dev-dependencies]
image = "0.25.10"
tracing-test = "0.2.6"
rstest = "0.26.1"
tempfile = "3.27.0"
