[workspace]
members = [".", "tauler-i3", "tauler-luax", "tauler-notify", "tauler-lifecycle-derive", "tauler-ui-macro", "takumi-incr", "tauler-docgen", "tauler-screenshot"]
resolver = "2"

[workspace.dependencies]
optative = "0.1.1"

[package]
name = "tauler"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rquickjs = { version = "0.11", features = ["loader"] }
rquickjs-serde = "0.5"
oxc_transformer = "0.133.0"
takumi = "1.2.1"
x11rb = { version = "0.13.2", features = ["allow-unsafe-code", "randr"] }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
json-canon = "0.1.3"
tiny-skia = "0.12"
oxc_parser = "0.133.0"
oxc_codegen = "0.133.0"
oxc_allocator = "0.133.0"
oxc_semantic = "0.133.0"
oxc_span = "0.133.0"
oxc_ast = "0.133.0"
oxc_resolver = "11.20.0"
anyhow = "1.0.102"
serde_yaml = "0.9.34"
tauler-lifecycle-derive = { path = "tauler-lifecycle-derive" }
tauler-ui-macro = { path = "tauler-ui-macro" }
optative = "0.1.1"
takumi-incr = { path = "takumi-incr" }
notify = "8.2.0"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.14"
cached = { version = "0.59.0", features = ["proc_macro"] }
parley = "0.9"
optative-process-pool = "0.0.3"

tempfile = "3.27.0"

[dev-dependencies]
image = "0.25.10"
libc = "0.2.186"
tracing-test = "0.2.6"
rstest = "0.26.1"
