[workspace]
members = [".", "tauler-i3", "tauler-luax", "tauler-notify", "tauler-ui-macro", "takumi-incr", "tauler-docgen", "tauler-screenshot"]
resolver = "2"

[workspace.dependencies]
optative = "0.1.3"

[package]
name = "tauler"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rquickjs = { version = "0.11", features = ["loader"] }
rquickjs-serde = "0.5"
takumi = "1.2.1"
x11rb = { version = "0.13.2", features = ["allow-unsafe-code", "randr"] }
serde_json = "1.0.151"
serde = { version = "1.0.229", features = ["derive"] }
thiserror = "2.0.19"
json-canon = "0.1.3"
tiny-skia = "0.12"
anyhow = "1.0.104"
serde_yaml = "0.9.34"
tauler-ui-macro = { path = "tauler-ui-macro" }
optative = "0.1.3"
optative-process-pool = "0.0.7"
optative-derive = "0.0.3"
optative-script = "0.0.7"
takumi-incr = { path = "takumi-incr" }
notify = "8.2.0"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.15"
cached = { version = "0.59.0", features = ["proc_macro"] }
parley = "0.9"
tempfile = "3.27.0"

[dev-dependencies]
image = "0.25.10"
libc = "0.2.189"
tracing-test = "0.2.6"
rstest = "0.26.1"
