[package]
name = "takumi-incr"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
optative = { workspace = true }
takumi = "1.2.1"
serde_json = "1.0.150"
anyhow = "1.0.103"
image = "0.25.10"
lru = "0.18.1"
tracing = "0.1.44"
parley = "0.9"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
insta = "1.48.0"
