[package]
name = "tauler-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread", "time", "sync"] }
zbus = { version = "5.15.0", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
