[package]
name = "tauler-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time", "sync"] }
zbus = { version = "5.17.0", features = ["tokio"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
